<?xml version="1.0"?>
<package format="2">
    <name>hero_chassis_controller</name>
    <version>0.1.0</version>
    <description>A ROS package for controlling chassis with PID controllers.</description>
    <maintainer email="liaoqiayuan@gmail.com">Qiayuan Liao</maintainer>
    <license>BSD</license>
    <author email="liaoqiayuan@gmail.com">Qiayuan Liao</author>

    <!-- buildtool_depend: dependencies of the build process -->
    <buildtool_depend>catkin</buildtool_depend>
    <!-- build_depend: dependencies only used in source files -->
    <build_depend>boost</build_depend>
    <!-- depend: build, export, and execution dependency -->
    <depend>eigen</depend>
    <depend>roscpp</depend>
    <depend>sensor_msgs</depend>
    <depend>control_toolbox</depend>
    <depend>controller_interface</depend>
    <depend>effort_controllers</depend>
    <depend>pluginlib</depend>
    <depend>rm_description</depend>
    <depend>forward_command_controller</depend>
    <depend>hardware_interface</depend>

    <build_depend>roslint</build_depend>
    <build_depend>dynamic_reconfigure</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>nav_msgs</build_depend>
    <exec_depend>dynamic_reconfigure</exec_depend>
    <exec_depend>tf</exec_depend>
    <exec_depend>nav_msgs</exec_depend>

    <export>
        <controller_interface plugin="${prefix}/plugin_description.xml"/>
    </export>
    
</package>
